--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "untitled",
-  "version": "0.0.0",
+  "name": "h5p-node",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "mocha"
   },
   "engines": {
     "node": ">=8.0.0"
   },
   "dependencies": {
-    "body-parser": "~1.17.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.3",
-    "express": "~4.15.2",
-    "hbs": "~4.0.1",
-    "morgan": "~1.8.1",
-    "node-fetch": "^1.7.0",
-    "serve-favicon": "~2.4.2"
+    "dir-compare": "^1.4.0",
+    "fs-extra": "^3.0.1"
+  },
+  "devDependencies": {
+    "jasmine-node": "^1.14.5",
+    "request": "^2.81.0"
   }
 }
