--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "dir-compare": "^1.4.0",
     "fs-extra": "^3.0.1",
+    "fs-readdir-recursive": "^1.0.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "express": "^4.15.3"
   }
 }
