--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "node": ">=8.0.0"
   },
   "dependencies": {
+    "base-64": "^0.1.0",
     "dir-compare": "^1.4.0",
     "fs-extra": "^3.0.1",
     "fs-readdir-recursive": "^1.0.0",
-    "uuid": "^3.1.0"
+    "imageinfo": "^1.0.4",
+    "uuid": "^3.1.0",
+    "validator": "^7.2.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
